--- a/src/scss/PlaylistsScreen/_Playlist.scss
+++ b/src/scss/PlaylistsScreen/_Playlist.scss
@@ -4,14 +4,16 @@
 	display: flex;
 	flex-direction: row;
 	width: 100%;
-	// height: 16%;
-	background-color: $black-spotify;
+	height: 100%;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	border-bottom: 1px solid #eeee;
 
 	div {
 		width: 80%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
 	}
 
 	h2,
