--- a/src/scss/PlaylistsScreen/_playlistsContainer.scss
+++ b/src/scss/PlaylistsScreen/_playlistsContainer.scss
@@ -13,7 +13,39 @@
 		margin-block-start: 0;
 		margin-block-end: 0;
 	}
+}
 
+.header {
+	background-color: $green-spotify;
+	height: 10%;
+	border-bottom: 1px solid $gray;
+
+	h2 {
+		font-size: 40px;
+		margin-bottom: 0;
+		padding-top: 5px;
+		padding-bottom: 0;
+	}
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	justify-content: space-around;
+	height: 80%;
+	padding-inline-start: 0px;
+	h2 {
+		text-align: left;
+	}
+}
+
+.button-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 10%;
 	.goBack {
 		text-align: center;
 		background-color: $green-spotify;
@@ -24,28 +56,6 @@
 		height: 40px;
 		display: block;
 		margin: auto;
-	}
-}
-
-.header {
-	background-color: $green-spotify;
-	padding-bottom: 5px;
-	padding-top: 5px;
-	border-bottom: 1px solid $gray;
-
-	h2 {
-		font-size: 40px;
-	}
-}
-
-.list {
-	display: flex;
-	flex-direction: column;
-	list-style: none;
-	// height: 80%;
-	padding-inline-start: 0px;
-	h2 {
-		text-align: left;
 	}
 }
 
